--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,45 @@
-numpy
-toml
-scikit-learn
-pandas
-argparse
-scipy
-matplotlib
-git+https://github.com/TaatiTeam/pose_sequence.git#egg=pose_sequence
+appdirs==1.4.4
+certifi==2022.12.7
+charset-normalizer==3.0.1
+click==8.1.3
+cycler==0.11.0
+docker-pycreds==0.4.0
+fonttools==4.38.0
+-e git+https://github.com/TaatiTeam/gait_features_from_pose_python.git#egg=gait_features_from_pose
+gitdb==4.0.10
+GitPython==3.1.30
+idna==3.4
+importlib-metadata==6.0.0
+joblib==1.2.0
+kiwisolver==1.4.4
+matplotlib==3.5.3
+numpy==1.21.6
+packaging==23.0
+pandas==1.3.5
+pathtools==0.1.2
+Pillow==9.4.0
+-e git+https://github.com/TaatiTeam/pose_sequence.git#egg=pose-sequence
+-e git+https://github.com/TaatiTeam/pose2gait_public.git#egg=pose2gait
+protobuf==4.21.12
+psutil==5.9.4
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.7.1
+PyYAML==6.0
+requests==2.28.2
+scikit-learn==1.0.2
+scipy==1.7.3
+sentry-sdk==1.14.0
+setproctitle==1.3.2
+six==1.16.0
+smmap==5.0.0
+threadpoolctl==3.1.0
+toml==0.10.2
+torch==1.12.1
+torchaudio==0.12.1
+torchvision==0.13.1
+typing-extensions==4.4.0
+urllib3==1.26.14
+wandb==0.13.9
+zipp==3.12.0
+scikit-image
